--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/globals.css">
-    <link rel="stylesheet" href="./styles/variables.css">
-    <link rel="stylesheet" href="./styles/dark.css">
-    <link rel="stylesheet" href="./styles/light.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <meta
+      name="description"
+      content="Что делать, когда не можешь делать ничего
+    Или почему нам так сложно сконцентрироваться, особенно когда очень надо"
+    />
+    <!-- подключаются изображения иконок -->
+
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+
+    <!-- установка цветовой схемы сайта -->
+
+    <meta name="color-scheme" content="dark light" />
+
+    <!-- подключение стилей в нужном порядке  -->
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
+
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
@@ -39,6 +55,7 @@
             </button>
           </li>
         </ul>
+        <p class="header__lamp">rec</p>
       </nav>
     </header>
     <script src="./scripts/script.js"></script>
